--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="styles/css/style.css" rel="stylesheet">
 </head>
 <body>
     <ul class="nav justify-content-end">
@@ -24,8 +24,10 @@
         <nav class="navbar" id="navbar">
            <a href="index.html" class="nav-item">HOME</a>
            <a href="products.html" class="nav-item">PRODUCTS</a>
-           <a href="#" class="nav-item">PRODUCTS DESIGN</a>
-
+           <a href="product-details.html" class="nav-item">PRODUCT DETAILS</a>
+           <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          </form>
         </nav>
      </header>
      <main class="admin">
