--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="styles/css/style.css" rel="stylesheet">
 </head>
 <body>
   
@@ -19,6 +19,33 @@
         <li class="nav-item">
             <a href="admin.html" class="nav-link"><i class="fas fa-user"></i></a>
           </li>
+          <li class="nav-item">
+            <a href="" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
+            <div class="cart">
+              <h3 class="cart-title">Cart</h3>
+              <div class="cart-text">
+                <div class="cart-box">
+                  <img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt="" class="cart-img">
+                  <div class="detail-box">
+                    <div class="cart-text-title">Product1</div>
+                    <div class="cart-price">$20</div>
+                    <input type="number" value="1" class="cart-quantity">
+                  </div>
+                  <!--Remove Products-->
+                  <i class="fas fa-trash-alt"></i>
+                </div>
+              </div>
+              <!--Price-->
+              <div class="total">
+                <div class="total-title">Total</div>
+                <div class="total-price">$0</div>
+              </div>
+              <!--Buy-->
+              <button type="button" class="btn-buy">Buy now</button>
+              <!--Close-->
+              <i class="fas fa-times" id="close-cart"></i>
+            </div>
+          </li>
       </ul>
 
       <header>
@@ -26,7 +53,10 @@
         <nav class="navbar" id="navbar">
            <a href="#home" class="nav-item active">HOME</a>
            <a href="products.html" class="nav-item">PRODUCTS</a>
-           <a href="" class="nav-item">PRODUCTS DESIGN</a>
+           <a href="product-details.html" class="nav-item">PRODUCT DETAILS</a>
+           <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          </form>
         </nav>
      </header>
 
