--- a/product-details.html
+++ b/product-details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products Page</title>
+    <title>Products Details Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -52,7 +52,7 @@
         <nav class="navbar" id="navbar">
            <a href="index.html" class="nav-item">HOME</a>
            <a href="products.html" class="nav-item">PRODUCTS</a>
-           <a href="product-details.html" class="nav-item">PRODUCT DETAILS</a>
+           <a href="#" class="nav-item">PRODUCT DETAILS</a>
            <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           </form>
@@ -60,7 +60,7 @@
      </header>
 
      <section class="product-container">
-       <h2 class="section-title">Products</h2>
+       <h2 class="section-title">Product Details</h2>
        <div class="shop-content">
          <!--Box-1-->
          <div class="product-box">
@@ -86,22 +86,22 @@
          <!--Box-4-->
          <div class="product-box">
           <img src="" alt="" class="product-img">
-          <h2 class="product-title"></h2>
-          <span class="price"></span>
+          <h2 class="product-title">Shoes 1</h2>
+          <span class="price">$100</span>
           <i class="fas fa-shopping-cart"></i>
         </div>
          <!--Box-5-->
          <div class="product-box">
           <img src="" alt="" class="product-img">
-          <h2 class="product-title"></h2>
-          <span class="price"></span>
+          <h2 class="product-title">Shoes 1</h2>
+          <span class="price">$100</span>
           <i class="fas fa-shopping-cart"></i>
         </div>
          <!--Box-6-->
          <div class="product-box">
           <img src="" alt="" class="product-img">
-          <h2 class="product-title"></h2>
-          <span class="price"></span>
+          <h2 class="product-title">Shoes 1</h2>
+          <span class="price">$100</span>
           <i class="fas fa-shopping-cart"></i>
         </div>
          <!--Box-7-->
@@ -114,8 +114,8 @@
          <!--Box-8-->
          <div class="product-box">
           <img src="" alt="" class="product-img">
-          <h2 class="product-title"></h2>
-          <span class="price"></span>
+          <h2 class="product-title">Shoes 1</h2>
+          <span class="price">$100</span>
           <i class="fas fa-shopping-cart"></i>
         </div>
        </div>
@@ -148,6 +148,6 @@
           Dejan Dejic @ 2022
       </p>
 </section>
-<script src="js/products.js" type="module"></script>
+<script src="js/product-details.js" type="module"></script>
 </body>
 </html>
