local storage, js

--- a/products.html
+++ b/products.html
@@ -54,13 +54,13 @@
            <a href="products.html" class="nav-item">PRODUCTS</a>
            <a href="product-details.html" class="nav-item">PRODUCT DETAILS</a>
            <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input id="search_input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           </form>
       </nav>
      </header>
 
      <section class="product-container">
-       <h2 class="section-title">Products</h2>
+       <h1 class="section-title">Products</h1>
        <div class="shop-content">
          <!--Box-1-->
          <div class="product-box">
