--- a/cart.html
+++ b/cart.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products Details Page</title>
+    <title>Cart</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@300&display=swap" rel="stylesheet">  
     <link href="styles/css/style.css" rel="stylesheet">
 </head>
 <body>
     <ul class="nav justify-content-end">
-
-        <li class="nav-item">
-          <a href="admin.html" class="nav-link">Sign in/Sign up</a>
-        </li>
+      <li class="nav-item">
+        <a href="admin.html" class="nav-link">Sign in/Sign up</a>
+      </li>
         <li class="nav-item">
             <a href="admin.html" class="nav-link"><i class="fas fa-user"></i></a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
+            <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
             <div class="cart">
               <h3 class="cart-title">Cart</h3>
               <div class="cart-text">
@@ -50,51 +49,56 @@
             </div>
           </li>
       </ul>
+
       <header>
-        <a href="index.html" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt=""></a>
+        <a href="#" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt=""></a>
+        <div id="hamburger" class="fas fa-bars"></div>
         <nav class="navbar" id="navbar">
-           <a href="index.html" class="nav-item">HOME</a>
+           <a href="index.html" class="nav-item active">HOME</a>
            <a href="products.html" class="nav-item">PRODUCTS</a>
-           <a href="#" class="nav-item">PRODUCT DETAILS</a>
+           <a href="product-details.html" class="nav-item">PRODUCT DETAILS</a>
            <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          
           </form>
-      </nav>
+        </nav>
      </header>
 
-     <section class="product-container">
-       <h2 class="section-title">Product Details</h2>
-       <div class="shop-content">
-       </div>
-     </section>
+     <div class="container-sm">
 
-     <section class="footer">
-      <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-      </div>  
-      <ul class="list">
-          <li>
-              <a href="#">Home</a>
-          </li>
-          <li>
-              <a href="#">About</a>
-          </li>
-          <li>
-              <a href="#">Contact</a>
-          </li>
-          <li>
-              <a href="#">Terms</a>
-          </li>
-          <li>
-              <a href="#">Privacy Policy</a>
-          </li>
-      </ul>
-      <p class="copyright">
-          Dejan Dejic @ 2022
-      </p>
+    </div>
+   
+
+    
+      <section class="footer">
+        <div class="social">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>  
+        <ul class="list">
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">About</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+            <li>
+                <a href="#">Terms</a>
+            </li>
+            <li>
+                <a href="#">Privacy Policy</a>
+            </li>
+        </ul>
+        <p class="copyright">
+            Dejan Dejic @ 2022
+        </p>
 </section>
-<script src="js/product-details.js" type="module"></script>
+<script src="js/index.js" type="module"></script>
+<!-- Bootstrap JavaScript  -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
