--- a/cart.html
+++ b/cart.html
@@ -32,7 +32,7 @@
   </ul>
 
   <header>
-    <a href="#" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt=""></a>
+    <a href="#" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt="Logo"></a>
     <div id="hamburger" class="fas fa-bars"></div>
     <nav class="navbar" id="navbar">
       <a href="index.html" class="nav-item active">HOME</a>
