--- a/register.html
+++ b/register.html
@@ -22,7 +22,8 @@
           <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
       </ul>    
       <header>
-        <a href="index.html" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt=""></a>
+        <a href="index.html" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt="Logo"></a>
+        <div id="hamburger" class="fas fa-bars"></div>
         <nav class="navbar" id="navbar">
            <a href="index.html" class="nav-item active">HOME</a>
            <a href="products.html" class="nav-item">PRODUCTS</a>
@@ -84,7 +85,7 @@
             Dejan Dejic @ 2022
         </p>
 </section>
-      <script src="js/index.js"></script>
+      <script src="js/index.js"  type="module"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
