--- a/admin.html
+++ b/admin.html
@@ -23,7 +23,8 @@
       </ul>
       <header>
 
-        <a href="index.html" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt=""></a>
+        <a href="index.html" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt="Logo"></a>
+        <div id="hamburger" class="fas fa-bars"></div>
         <nav class="navbar" id="navbar">
            <a href="index.html" class="nav-item">HOME</a>
            <a href="products.html" class="nav-item">PRODUCTS</a>
