--- a/product-details.html
+++ b/product-details.html
@@ -21,30 +21,11 @@
           </li>
           <li class="nav-item">
             <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
-            <!-- <div class="cart">
-              <h3 class="cart-title">Cart</h3>
-              <div class="cart-text">
-                <div class="cart-box">
-                  <img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt="" class="cart-img">
-                  <div class="detail-box">
-                    <div class="cart-text-title">Product1</div>
-                    <div class="cart-price">$20</div>
-                    <input type="number" value="1" class="cart-quantity">
-                  </div>
-                  <i class="fas fa-trash-alt"></i>
-                </div>
-              </div>
-              <div class="total">
-                <div class="total-title">Total</div>
-                <div class="total-price">$0</div>
-              </div>
-              <button type="button" class="btn-buy">Buy now</button>
-              <i class="fas fa-times" id="close-cart"></i>
-            </div> -->
           </li>
       </ul>
       <header>
-        <a href="index.html" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt=""></a>
+        <a href="index.html" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt="Logo"></a>
+        <div id="hamburger" class="fas fa-bars"></div>
         <nav class="navbar" id="navbar">
            <a href="index.html" class="nav-item">HOME</a>
            <a href="products.html" class="nav-item">PRODUCTS</a>
