--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
 <body>
   <ul class="nav justify-content-end bg-black">
-    <li class="nav-item">
-      <a href="admin.html" class="nav-link">Sign in/Sign up</a>
+    <li class="nav-item auth_tab">
     </li>
     <li class="nav-item">
       <a href="admin.html" class="nav-link"><i class="fas fa-user"></i></a>
