--- a/register.html
+++ b/register.html
@@ -1,69 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
     <ul class="nav justify-content-end bg-black">
         <li class="nav-item">
-          <a href="admin.html" class="nav-link">Sign in/Sign up</a>
+            <a href="admin.html" class="nav-link">Sign in/Sign up</a>
         </li>
         <li class="nav-item">
-          <a href="admin.html" class="nav-link"><i class="fas fa-user"></i></a>
+            <a href="admin.html" class="nav-link"><i class="fas fa-user"></i></a>
         </li>
         <li class="nav-item">
-          <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
-      </ul>    
-      <header>
+            <a href="cart.html" class="nav-link"><i class="fas fa-cart-plus" id="cart-icon"></i></a>
+    </ul>
+    <header>
         <a href="index.html" class="logo"><img src="images/Skjermbilde 2022-02-02 kl. 14.33.36.png" alt="Logo"></a>
         <div id="hamburger" class="fas fa-bars"></div>
         <nav class="navbar" id="navbar">
-           <a href="index.html" class="nav-item active">HOME</a>
-           <a href="products.html" class="nav-item">PRODUCTS</a>
-           <a href="product-details.html" class="nav-item">PRODUCTS DETAILS</a>
+            <a href="index.html" class="nav-item active">HOME</a>
+            <a href="products.html" class="nav-item">PRODUCTS</a>
+            <a href="product-details.html" class="nav-item">PRODUCTS DETAILS</a>
         </nav>
-     </header>
-     <main class="admin">
-    <div class="container-admin">
-        <div class="sign-in">
-            <div class="panels-container">
-                </form>
-                <form action="" class="sign-in-from">
-                    <h3 class="admin-title">Sign up</h3>
-                    <div class="input-field">
-                    <i class="fa fa-user"></i>
-                    <input type="text" placeholder="Username">
-                    </div>
-                    <div class="input-field">
-                    <i class="fa fa-envelope"></i>
-                    <input type="text" placeholder="Email">
-                    </div>
-                    <div class="input-field">
-                    <i class="fa fa-lock"></i>
-                    <input type="password" placeholder="Password">
-                    </div>
-                    <input type="submit" value="Sign up" class="admin-btn" id="sign-up-btn">
-                </form>
+    </header>
+    <main class="admin">
+        <div class="container-admin">
+            <div class="sign-in">
+                <div class="panels-container">
+                    <form action="#" id="signup_form">
+                        <h3 class="admin-title">Sign up</h3>
+                        <div class="input-field">
+                            <i class="fa fa-user"></i>
+                            <div class="inputWrapper">
+                                <input id="username" type="text" placeholder="Username" >
+                                <div class="error-message"></div>
+                            </div>
+                        </div>
+                        <div class="input-field">
+                            <i class="fa fa-envelope"></i>
+                            <div class="inputWrapper">
+                                <input id="email" type="email" autocomplete placeholder="Email">
+                                <div class="error-message"></div>
+                            </div>
+                        </div>
+                        <div class="input-field">
+                            <i class="fa fa-lock"></i>
+                            <div class="inputWrapper">
+                                <input id="password" type="password" placeholder="Password">
+                                <div class="error-message"></div>
+                            </div>
+                        </div>
+                        <input type="submit" value="Sign up" class="admin-btn" id="signup_btn">
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</main>
-    
-     
+    </main>
 
-      <section class="footer">
+
+
+    <section class="footer">
         <div class="social">
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
-        </div>  
+        </div>
         <ul class="list">
             <li>
                 <a href="#">Home</a>
@@ -84,8 +97,11 @@
         <p class="copyright">
             Dejan Dejic @ 2022
         </p>
-</section>
-      <script src="js/index.js"  type="module"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="js/register.js" type="module"></script>
 </body>
+
 </html>
