--- a/admin.html
+++ b/admin.html
@@ -94,7 +94,7 @@
             </li>
         </ul>
         <p class="copyright">
-            Dejan Dejic @ 2022
+            SHOESby DD @ 2022
         </p>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
