--- a/cart.html
+++ b/cart.html
@@ -107,7 +107,7 @@
       </li>
     </ul>
     <p class="copyright">
-      Dejan Dejic @ 2022
+      SHOESby DD @ 2022
     </p>
   </section>
   <script src="js/cart.js" type="module"></script>
