--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </li>
     </ul>
     <p class="copyright">
-      Dejan Dejic @ 2022
+      SHOESby DD @ 2022
     </p>
   </section>
   <script src="js/index.js" type="module"></script>
