--- a/product-details.html
+++ b/product-details.html
@@ -68,7 +68,7 @@
           </li>
       </ul>
       <p class="copyright">
-          Dejan Dejic @ 2022
+        SHOESby DD @ 2022
       </p>
 </section>
 <script src="js/product-details.js" type="module"></script>
