--- a/products.html
+++ b/products.html
@@ -124,7 +124,7 @@
           </li>
       </ul>
       <p class="copyright">
-          Dejan Dejic @ 2022
+        SHOESby DD @ 2022
       </p>
 </section>
 <script src="js/products.js" type="module"></script>
