--- a/register.html
+++ b/register.html
@@ -97,7 +97,7 @@
             </li>
         </ul>
         <p class="copyright">
-            Dejan Dejic @ 2022
+            SHOESby DD @ 2022
         </p>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -105,5 +105,4 @@
         crossorigin="anonymous"></script>
     <script src="js/register.js" type="module"></script>
 </body>
-
 </html>
